# plil-dumper

./: .dev.env  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
dumper/: main.py
dumper/config/: __init__.py
dumper/db/: __init__.py
dumper/query/: __init__.py
dumper/schemas/: __init__.py
dumper/utils/: __init__.py
