[tool.poetry]
name = "dumper"
version = "0.1.0"
description = "A python dumper for phone number to parse all the expired agent phone numbers"
authors = ["jiaulislam <jiaulislam.ict.bd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
sqlalchemy = "^2.0.18"
oracledb = "^1.3.2"
typer = {extras = ["all"], version = "^0.9.0"}
pydantic = {extras = ["all"], version = "^2.0.2"}
python-dotenv = "^1.0.0"
pydantic-settings = "^2.0.1"


[tool.poetry.group.dev.dependencies]
devtools = "^0.11.0"
black = "^23.3.0"
ruff = "^0.0.277"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]

ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

extend-exclude = [
    "./epay/tests",
    ".pyenv",
]

[tool.isort]
known-third-party = ["python-dotenv", "oracledb", "sqlalchemy", "typer"]
